--- a/PUNKBeers/Base.lproj/Main.storyboard
+++ b/PUNKBeers/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Beers Table View Controller-->
         <scene sceneID="6aF-hZ-bFP">
             <objects>
-                <tableViewController id="dWW-4X-zJJ" sceneMemberID="viewController">
+                <tableViewController id="dWW-4X-zJJ" customClass="BeersTableViewController" customModule="PUNKBeers" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gwZ-nJ-SqJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,7 +35,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fFR-2N-0vd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="158" y="96"/>
+            <point key="canvasLocation" x="57" y="97"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="K6c-M0-wI7">
+            <objects>
+                <viewController id="XmM-YO-Rts" customClass="DetailViewController" customModule="PUNKBeers" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DW9-wY-cnY"/>
+                        <viewControllerLayoutGuide type="bottom" id="ETm-o6-1k5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4SD-u3-sdj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GEi-js-LF2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="745" y="97"/>
         </scene>
     </scenes>
 </document>
